Revision history for Devel::Size::Report

2004-01-06 v0.01 Tels 42 tests (not released)
  * first release with:
     report_size(), track_size(), element_type(), entries_per_element() 
2004-01-09 v0.02 Tels 42 tests
  * fixed bug in calculating overhead with contained hashes
  * added example/psize
2004-01-10 v0.03 Tels 49 tests
  * psize: don't print out added "use" statements
  * report_size(): print overhead in %, too (Thanx nadim!)
  * knows about CODE, REGEXP, LVALUE and Scalar refs and prints them correctly
  * stop at cyclic references (e.g. don't loop forever)
  * disable Devel::Size warnings (about incomplete CV etc, thanx nadim!)
  * drop the "Key " from the output, it is rendundand (thanx nadim!)
  * report_size: bytes => '' in $options works correctly now (thanx nadim!)
2004-01-10 v0.04 Tels 55 tests
  * fixed the bug that sometimes looking at a scalar again after looking at
    a longer scalar reported the wrong (bigger) size. $pre = shift vs. $_[0]
    usage in total_size() was the culprit (slot reusing).  Thanx Sadahiro!
  * Size report outputs version of Devel::Size::Report, too
  * refactored tests into three files, added some more tests
  * use Scalar::Util to get reftype and refaddr
  * added option 'addr' to report_size() to print elem address
  * example/psize takes options as second string argument