@@ -1,9 +1,13 @@
 
 Whats new in this version:
 
-v0.04:
-  * fixed the bug that sometimes looking at a scalar again after looking at
-    a longer scalar reported the wrong (bigger) size. $pre = shift vs. $_[0]
-    usage in total_size() was the culprit (slot reusing).  Thanx Sadahiro!
-  * Size report outputs version of Devel::Size::Report, too
-  * refactored tests into three files
+2004-01-13 v0.05 Tels 76 tests
+  * references to ARRAY, HASH are handled properly
+  * references to SCALARs are now reported likewise than ARRAY/HASH refs
+  * fixed indendation bug with hash keys pointing to SCALARs
+  * more tests, especially for the addr => 1 feature
+  * psize takes options as single-letter abbrev., too
+  * added option "class" to optionally show classnames
+  * added a BUGS file, pointing out the problems with LVALUEs, and
+    wrong total sizes (for BigRat, and having the same data referenced
+    multiple times)
