@@ -13,30 +13,33 @@ not run its Makefile.PL or Build.PL.
 
 -----BEGIN PGP SIGNED MESSAGE-----
 
-SHA1 3cb5829804893e8b0850ab202da2b8497ff508c2 CHANGES
+SHA1 bc914dfc89dfc8f7ce25642961aa1208fe6d6e7b BUGS
+SHA1 d3b9b4a7fccc1e365a9be8ef416cef05d265ea5a CHANGES
 SHA1 d6a6c30ee6d9ba6b9afab8bbf6a25e1b23c744e0 LICENSE
-SHA1 72ebc70573fb964adf9e381709fc77a96fa03af1 MANIFEST
-SHA1 5a7fe20274daa451b6f097bf1139f396dfbf7a96 META.yml
+SHA1 2f8ab97953d1bed8dd5f923f2a833041b00c3d9a MANIFEST
+SHA1 e168df9f28c9d893bb036fc4025732d45565bba0 META.yml
 SHA1 7107dd846cdb2954eb39cac6d4ca78ed581fff87 Makefile.PL
-SHA1 a836b3f6b9fabcfa015ad1b7c913cd0ce35ad62c NEW
+SHA1 4d066adc9e6b65a1f997265147d222971ec4e290 NEW
 SHA1 116d3941990ade15cb1a8539a9f489ceb00638fa README
-SHA1 74b4e353e806db73a451189a68bccf5e6558bf5e TODO
-SHA1 77d6e01f7f13b5703a7be3a5cdf3c7cf34319be2 example/psize
+SHA1 8be8469791dd49d63fe3e3cd0ed0e839b198d4eb TODO
+SHA1 0dbe5364f74a5909cfe2b7a6e992cc28b7811cc6 example/psize
 SHA1 1042e80396c83c99d04f87ee1c47bbd4e36b03f1 example/size.pl
-SHA1 10f49baedbfc8f00f7e10a21bcbb4c89d9a09700 lib/Devel/Size/Report.pm
+SHA1 377f5ac3bd3865e3b6ba78ef0db4dcaf158af6d6 lib/Devel/Size/Report.pm
 SHA1 cbd61d3e2c679c12aaefd33714bf46d251dcd81a t/00_basic.t
-SHA1 d1047e1414357ecd58c8010a8e806b71a76918a6 t/01_track.t
-SHA1 60c98f81d24bd58db9718ef10c172ec31983c7e8 t/02_report.t
-SHA1 41dbb92e5532dfae513d6c7e8e10448cec9f8432 t/03_format.t
+SHA1 eaf69e31f126d0b6f70c28b22673544da053f8dc t/01_track.t
+SHA1 b1555992d0b096741eea1d681c21ef407720ae42 t/02_report.t
+SHA1 228ea6d3db9c6f7d78180676b68fb0fa87bca53e t/03_format.t
+SHA1 d0ab2fe6890952b661fca185cd623eb6736a47c3 t/04_cycle.t
+SHA1 fc076d4d634506fd38fdd40618c1ebc0bfa052c6 t/05_address.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.2.2-rc1-SuSE (GNU/Linux)
 Comment: When cryptography is outlawed, bayl bhgynjf jvyy unir cevinpl.
 
-iQEVAwUBQAE3+HcLPEOTuEwVAQEfwgf9FMwnOUpAyKMpqeXoCwKT1kPd8UZrG/nh
-avVjsdTSYreG00Bk2nGv8qxWhS9jhA2EyGvNjWlnYws/8X/OWJK5BvyzI3bIR28C
-Zw8lhkRBH4JRy9GYlMRxb+4Q1lUrXi8q8us37MEBQ3OD9C4ll2vg3Zt7Xrxwc1kq
-d/RyhyNo994mrGPvDxXGLy2Kbm4z9YQZCFKM8AVTfd9s+gmaxzPxcvXsaT2Gcgxu
-COVkhoDbfWQCsj7nPtEsRqynXKsR/iR56W4OMGWVAawA+iXNdK3K1iyt4/uC9Wl5
-EDP6cof+2VhpPkeKZDH5ZsqLguGJPHMajbtZD1jUchTBPyfN/TEKRg==
-=gaUd
+iQEVAwUBQARIZHcLPEOTuEwVAQFfsAf+LWzN4MtO0Qir0pMmM6GK6ksL2kiMXeRt
+YBBMFm/G7L1rT+Fdgf5AYeOWLfhtBnFewwqPPXltx2oDYRQ+hY9pIxyvSHyX66+2
+yQ0209DKKlvuO7lQ9HFn6wireImqRWEB4/E6c23Ri7KFsMKnqq9zbHpPLTXltORA
+CnG+ORAJoQkxdAkm+uyPNnzvm5479Ib1XeJj+LiiJupuuZBj5FJEHyCOCH4yzald
+R941daLQyQt9aFKuDzt3sH2omWTXoYuXT/49p/OobsTvEUutd2spIPyGkIgNBfWC
+qi7duoBEclHQpnXQumB81MTqPhK6Xj3onNwTvQiw53SccA/pPLOi8g==
+=LP4T
 -----END PGP SIGNATURE-----
